# tiamat

./: .gitmodules  CMakeLists.txt  readme.md
godot_headers/: gdnative_api_struct.gen.h
project/: Scene.tscn  player.tscn  project.godot
project/character/: character.png.import  character_animation_frames.tres  character_shape.tres
project/character/character_down/: character_down_1.tres  character_down_2.tres  character_down_3.tres  character_down_4.tres
project/character/character_left/: character_left_1.tres  character_left_2.tres  character_left_3.tres  character_left_4.tres
project/character/character_right/: character_right_1.tres  character_right_2.tres  character_right_3.tres  character_right_4.tres
project/character/character_up/: character_up_1.tres  character_up_2.tres  character_up_3.tres  character_up_4.tres
src/: agent.cpp  agent.h  agent_animator.cpp  agent_animator.h  movement.h  registry.cpp
